--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
 msgpack==1.0.8
+pillow==10.4.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
