--- a/livechat/docker/requirements.txt
+++ b/livechat/docker/requirements.txt
@@ -1,1 +1,47 @@
-
+aioredis==1.3.1
+asgiref==3.8.1
+async-timeout==4.0.3
+attrs==23.2.0
+autobahn==23.6.2
+Automat==22.10.0
+certifi==2024.8.30
+cffi==1.16.0
+channels==3.0.5
+channels-redis==4.2.0
+charset-normalizer==3.3.2
+constantly==23.10.4
+cryptography==42.0.7
+daphne==3.0.2
+Django==4.2.16
+django-cors-headers==4.4.0
+django-extensions==3.2.3
+djangorestframework==3.15.2
+drf-extra-fields==3.7.0
+filetype==1.2.0
+hiredis==2.3.2
+hyperlink==21.0.0
+idna==3.7
+incremental==22.10.0
+jwt==1.3.1
+msgpack==1.0.8
+pillow==10.4.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+PyJWT==2.8.0
+pyOpenSSL==24.1.0
+python-decouple==3.8
+python-dotenv==1.0.1
+redis==5.0.4
+requests==2.32.3
+service-identity==24.1.0
+simplejwt==2.0.1
+six==1.16.0
+sqlparse==0.5.0
+Twisted==24.3.0
+txaio==23.1.1
+typing==3.7.4.3
+typing_extensions==4.11.0
+urllib3==2.2.3
+websockets==13.0.1
+zope.interface==6.4
