--- a/user_game_stats/docker/Dockerfile
+++ b/user_game_stats/docker/Dockerfile
@@ -1,14 +1,16 @@
-FROM python:3.9
+FROM python:3.10
 
 WORKDIR /app
 
-COPY docker/requirements.txt /app/
+COPY user_game_stats/docker/requirements.txt /app/
 
 RUN pip install --upgrade pip
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY /srcs/ /app/
+COPY user_game_stats/srcs/ /app/
+
+COPY shared /app/shared/
 
 EXPOSE 8081
 
