--- a/user_game_stats/docker/Dockerfile
+++ b/user_game_stats/docker/Dockerfile
@@ -14,4 +14,8 @@ COPY shared /app/shared/
 
 EXPOSE 8080
 
+RUN python manage.py makemigrations user_stats
+
+RUN python manage.py migrate
+
 CMD ["python", "manage.py", "runserver", "127.0.0.1:8080"]
