--- a/users/docker/Dockerfile
+++ b/users/docker/Dockerfile
@@ -14,4 +14,8 @@ COPY shared /app/shared/
 
 EXPOSE 8000
 
+RUN python manage.py makemigrations user
+
+RUN python manage.py migrate
+
 CMD ["python", "manage.py", "runserver", "127.0.0.1:8000"]
