--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ cryptography==42.0.7
 daphne==4.1.2
 Django==5.0.6
 django-cors-headers==4.4.0
+django-extensions==3.2.3
+djangorestframework==3.15.2
 hiredis==2.3.2
 hyperlink==21.0.0
 idna==3.7
