Docker Compose Fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,27 +12,27 @@ services:
   users:
     build:
       dockerfile: users/docker/Dockerfile
-    command: python manage.py runserver 0.0.0.0:8000
+    # command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - ./users/srcs:/app
+      - ./users/srcs/db.sqlite3:/app/db.sqlite3
     ports:
       - "8000:8000"
 
   user_game_stats:
     build:
       dockerfile: user_game_stats/docker/Dockerfile
-    command: python manage.py runserver 0.0.0.0:8080
+    # command: python manage.py runserver 0.0.0.0:8080
     volumes:
-      - ./user_game_stats/srcs:/app
+      - ./user_game_stats/srcs/db.sqlite3:/app/db.sqlite3
     ports:
       - "8080:8080"
 
   livechat:
     build:
       dockerfile: livechat/docker/Dockerfile
-    command: python manage.py runserver 0.0.0.0:9000
+    # command: python manage.py runserver 0.0.0.0:9000
     volumes:
-      - ./livechat/srcs:/app
+      - ./livechat/srcs/db.sqlite3:/app/db.sqlite3
     ports:
       - "9000:9000"
 
