--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - ./users/srcs/db.sqlite3:/app/db.sqlite3
     ports:
       - "8000:8000"
+    networks:
+      - app-network
 
   user_game_stats:
     build:
@@ -14,6 +16,8 @@ services:
       - ./user_game_stats/srcs/db.sqlite3:/app/db.sqlite3
     ports:
       - "8080:8080"
+    networks:
+      - app-network
 
   livechat:
     build:
@@ -22,3 +26,9 @@ services:
       - ./livechat/srcs/db.sqlite3:/app/db.sqlite3
     ports:
       - "9000:9000"
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
