--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,9 @@ services:
       - "8000:8000"
     networks:
       - app-network
+    command: python manage.py runserver 0.0.0.0:8000
 
-  user_game_stats:
+  user-game-stats:
     build:
       dockerfile: user_game_stats/docker/Dockerfile
     volumes:
@@ -18,6 +19,7 @@ services:
       - "8080:8080"
     networks:
       - app-network
+    command: python manage.py runserver 0.0.0.0:8080
 
   livechat:
     build:
@@ -28,6 +30,7 @@ services:
       - "9000:9000"
     networks:
       - app-network
+    command: python manage.py runserver 0.0.0.0:9000
 
 networks:
   app-network:
