--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Django==5.0.6
 django-cors-headers==4.4.0
 django-extensions==3.2.3
 djangorestframework==3.15.2
+gunicorn==23.0.0
 hiredis==2.3.2
 hyperlink==21.0.0
 idna==3.7
