--- a/users/docker/Dockerfile.old
+++ b/users/docker/Dockerfile.old
@@ -18,4 +18,4 @@ RUN python manage.py makemigrations user
 
 RUN python manage.py migrate
 
-CMD ["gunicorn", "user_management-wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
