--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,13 +1,35 @@
-upstream django {
+upstream user_service {
 	server users:8000;
+}
+
+upstream user_game_stat_service {
+	server user-game-stats:8080;
+}
+
+upstream livechat_service {
+	server livechat:9000;
 }
 
 # nginx/nginx.conf
 server {
     listen 80;
-    server_name users:8000;
-    location / {
+    server_name transcendence;
+    location /users/ {
         proxy_pass http://users:8000;  # Django container name
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    location /user-game-stats/ {
+        proxy_pass http://user-game-stats:8080;  # Django container name
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    location /livechat/ {
+        proxy_pass http://livechat:9000;  # Django container name
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
