--- a/user-game-stats/docker/nginx/default.conf
+++ b/user-game-stats/docker/nginx/default.conf
@@ -1,13 +1,13 @@
 upstream django {
-	server users:8000;
+	server user-game-stats:8080;
 }
 
 # nginx/nginx.conf
 server {
     listen 80;
-    server_name users:8000;
+    server_name user-game-stats:8080;
     location / {
-        proxy_pass http://users:8000;  # Django container name
+        proxy_pass http://user-game-stats:8080;  # Django container name
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -24,13 +24,13 @@ server {
 }
 server {
     listen 443 ssl;
-    server_name users:8000;
+    server_name user-game-stats:8080;
 
     ssl_certificate /etc/nginx/ssl/certificate.crt;
     ssl_certificate_key /etc/nginx/ssl/private.key;
 	ssl_protocols TLSv1.2 TLSv1.3;
     location / {
-        proxy_pass http://users:8000;
+        proxy_pass http://user-game-stats:8080;;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
