--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -46,13 +46,27 @@ server {
 }
 server {
     listen 443 ssl;
-    server_name users:8000;
+    server_name transcendence;
 
     ssl_certificate /etc/nginx/ssl/certificate.crt;
     ssl_certificate_key /etc/nginx/ssl/private.key;
 	ssl_protocols TLSv1.2 TLSv1.3;
-    location / {
-        proxy_pass http://users:8000;
+    location /users/ {
+        proxy_pass http://users:8000;  # Django container name
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    location /user-game-stats/ {
+        proxy_pass http://user-game-stats:8080;  # Django container name
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    location /livechat/ {
+        proxy_pass http://livechat:9000;  # Django container name
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
