--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,19 +14,27 @@ upstream livechat_service {
 server {
     listen 80;
     server_name transcendence;
-    location /users/ {
+    location /user/ {
         proxy_pass http://users:8000;  # Django container name
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        add_header Access-Control-Allow-Origin *;  # Allow all origins (not recommended for production)
+        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, DELETE, PATCH";
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type";
     }
-    location /user-game-stats/ {
+    location /user-stats/ {
         proxy_pass http://user-game-stats:8080;  # Django container name
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        add_header Access-Control-Allow-Origin *;  # Allow all origins (not recommended for production)
+        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, DELETE, PATCH";
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type";
     }
     location /livechat/ {
         proxy_pass http://livechat:9000;  # Django container name
@@ -34,6 +42,15 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        add_header Access-Control-Allow-Origin *;  # Allow all origins (not recommended for production)
+        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, DELETE, PATCH";
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type";
+    }
+
+    #alllow all stuff ig
+    location ~* .(eot|ttf|woff|woff2)$ {
+        add_header Access-Control-Allow-Origin *;
     }
     location /static/ {
         alias /app/static/;  # Path to static files in Django container
@@ -42,6 +59,20 @@ server {
         alias /app/media/;  # Path to media files in Django container
     }
     # Redirect HTTP to HTTPS
+    # Redirect to port 8443 if the request is for a specific subpath, e.g., /users/
+    if ($request_uri ~* "^/user/") {
+        return 301 https://$host:8000$request_uri;
+    }
+
+    if ($request_uri ~* "^/user-stats/") {
+        return 301 https://$host:8080$request_uri;
+    }
+
+    # Redirect to port 9443 if the request is for another specific subpath, e.g., /livechat/
+    if ($request_uri ~* "^/livechat/") {
+        return 301 https://$host:9000$request_uri;
+    }
+
     return 301 https://$host$request_uri;
 }
 server {
@@ -51,14 +82,14 @@ server {
     ssl_certificate /etc/nginx/ssl/certificate.crt;
     ssl_certificate_key /etc/nginx/ssl/private.key;
 	ssl_protocols TLSv1.2 TLSv1.3;
-    location /users/ {
+    location /user/ {
         proxy_pass http://users:8000;  # Django container name
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-    location /user-game-stats/ {
+    location /user-stats/ {
         proxy_pass http://user-game-stats:8080;  # Django container name
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
