--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,53 @@
 services:
   users:
-    build:
-      dockerfile: users/docker/Dockerfile
+    build: ./users/docker
+      # dockerfile: users/docker/Dockerfile
     volumes:
       - ./users/srcs/db.sqlite3:/app/db.sqlite3
-    ports:
-      - "8000:8000"
     networks:
       - app-network
     env_file:
       - .env
-    command: python manage.py runserver 0.0.0.0:8000
+    restart: on-failure
+    # command: python manage.py runserver 0.0.0.0:8000
 
   user-game-stats:
-    build:
-      dockerfile: user-game-stats/docker/Dockerfile
+    build: ./user-game-stats/docker
+      # dockerfile: user-game-stats/docker/Dockerfile
     volumes:
       - ./user-game-stats/srcs/db.sqlite3:/app/db.sqlite3
-    ports:
-      - "8080:8080"
     networks:
       - app-network
-    command: python manage.py runserver 0.0.0.0:8080
+    restart: on-failure
+    # command: python manage.py runserver 0.0.0.0:8080
 
   livechat:
-    build:
-      dockerfile: livechat/docker/Dockerfile
+    build: ./livechat/docker
+      # dockerfile: livechat/docker/Dockerfile
     volumes:
       - ./livechat/srcs/db.sqlite3:/app/db.sqlite3
-    ports:
-      - "9000:9000"
     networks:
       - app-network
-    command: python manage.py runserver 0.0.0.0:9000
+    restart: on-failure
+    # command: python manage.py runserver 0.0.0.0:9000
+
+  nginx:
+    build: ./nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/ssl:/etc/nginx/ssl
+      - ./nginx/frontend:/usr/share/nginx/html
+    depends_on:
+      - users
+      - user-game-stats
+      - livechat
+      - gamebackend
+    networks:
+      - app-network
+    restart: on-failure
 
 networks:
   app-network:
