--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,7 +30,7 @@ http {
 		ssl_protocols TLSv1.2 TLSv1.3;
 		
 		# Host frontend
-		root /app;
+		root /usr/shared/nginx/html;
 		index index.html;
 
 		# Handle all requests to frontend
