--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,9 +13,9 @@ http {
 
 	server {
 		listen 80;
-		server_name localhost
+		server_name localhost;
 
-		return 301 https://$host$request_uri
+		return 301 https://$host$request_uri;
 	}
 
 	server {
@@ -30,12 +30,25 @@ http {
 		ssl_protocols TLSv1.2 TLSv1.3;
 		
 		# Host frontend
-		root /usr/shared/nginx/html;
+		root /usr/share/nginx/html;
 		index index.html;
 
 		# Handle all requests to frontend
 		location / {
 			try_files $uri $uri/ /index.html;
+			
+			# CORS (pls work i beg you)
+			add_header 'Access-Control-Allow-Origin' '*';
+			add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+			add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+
+			# Handle preflight requests for CORS
+			if ($request_method = OPTIONS ) {
+				add_header 'Access-Control-Allow-Origin' '*';
+				add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+				add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+				return 204;  # No content for preflight requests
+			}
 		}
 
 		# Handle all requests to backend to user
@@ -45,6 +58,19 @@ http {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
+
+			# CORS (pls work i beg you)
+			add_header 'Access-Control-Allow-Origin' '*';
+			add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+			add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+
+			# Handle preflight requests for CORS
+			if ($request_method = OPTIONS ) {
+				add_header 'Access-Control-Allow-Origin' '*';
+				add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+				add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+				return 204;  # No content for preflight requests
+			}
 		}
 
 		# Handle all requests to backend to user-stats
@@ -54,6 +80,19 @@ http {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
+
+			# CORS (pls work i beg you)
+			add_header 'Access-Control-Allow-Origin' '*';
+			add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+			add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+
+			# Handle preflight requests for CORS
+			if ($request_method = OPTIONS ) {
+				add_header 'Access-Control-Allow-Origin' '*';
+				add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+				add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+				return 204;  # No content for preflight requests
+			}
 		}
 
 		# Handle all requests to backend to livechat
@@ -63,6 +102,19 @@ http {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
+
+			# CORS (pls work i beg you)
+			add_header 'Access-Control-Allow-Origin' '*';
+			add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+			add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+
+			# Handle preflight requests for CORS
+			if ($request_method = OPTIONS ) {
+				add_header 'Access-Control-Allow-Origin' '*';
+				add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+				add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+				return 204;  # No content for preflight requests
+			}
 		}
 
 		# Handle all requests to backend to game backend cli
@@ -72,6 +124,19 @@ http {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
+
+			# CORS (pls work i beg you)
+			add_header 'Access-Control-Allow-Origin' '*';
+			add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+			add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+
+			# Handle preflight requests for CORS
+			if ($request_method = OPTIONS ) {
+				add_header 'Access-Control-Allow-Origin' '*';
+				add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+				add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+				return 204;  # No content for preflight requests
+			}
 		}
 
 		# Handle all requests to backend to livechat sockets
@@ -80,7 +145,7 @@ http {
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "Upgrade";
-			proxy_set_header Host $host
+			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
@@ -88,6 +153,19 @@ http {
 			# Timeouts to prevent disconnections
 			proxy_read_timeout 60s;
 			proxy_send_timeout 60;
+
+			# CORS (pls work i beg you)
+			add_header 'Access-Control-Allow-Origin' '*';
+			add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+			add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+
+			# Handle preflight requests for CORS
+			if ($request_method = OPTIONS ) {
+				add_header 'Access-Control-Allow-Origin' '*';
+				add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+				add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+				return 204;  # No content for preflight requests
+			}
 		}
 
 		# Handle all requests to backend to gamebackend sockets
@@ -96,7 +174,7 @@ http {
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "Upgrade";
-			proxy_set_header Host $host
+			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
@@ -104,128 +182,20 @@ http {
 			# Timeouts to prevent disconnections
 			proxy_read_timeout 60s;
 			proxy_send_timeout 60;
-		}
 
-		# CORS (pls work i beg you)
-		add_header 'Access-Control-Allow-Origin' '*';
-		add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
-		add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
-
-		# Handle preflight requests for CORS
-		if ($request_method = OPTIONS ) {
+			# CORS (pls work i beg you)
 			add_header 'Access-Control-Allow-Origin' '*';
 			add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
 			add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
-			return 204;  # No content for preflight requests
+
+			# Handle preflight requests for CORS
+			if ($request_method = OPTIONS ) {
+				add_header 'Access-Control-Allow-Origin' '*';
+				add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
+				add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+				return 204;  # No content for preflight requests
+			}
 		}
+
 	}
-}
-
-server {
-	listen 80;
-	server_name localhost
-
-	return 301 https://$host$request_uri
-}
-
-server {
-	listen 443 ssl;
-	server_name localhost;
-
-	#SSL certificates
-	ssl_certificate /etc/nginx/ssl/certificate.crt;
-	ssl_certificate_key /etc/nginx/ssl/private.key;
-
-	# Better SSL security
-	ssl_protocols TLSv1.2 TLSv1.3;
-	
-	# Host frontend
-	root /app;
-	index index.html;
-
-	# Handle all requests to frontend
-	location / {
-		try_files $uri $uri/ /index.html;
-	}
-
-	# Handle all requests to backend to user
-	location /user/ {
-		proxy_pass http://localhost:8000;
-		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header X-Forwarded-Proto $scheme;
-	}
-
-	# Handle all requests to backend to user-stats
-	location /user-stats/ {
-		proxy_pass http://localhost:8080;
-		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header X-Forwarded-Proto $scheme;
-	}
-
-	# Handle all requests to backend to livechat
-	location /rooms/ {
-		proxy_pass http://localhost:9000;
-		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header X-Forwarded-Proto $scheme;
-	}
-
-	# Handle all requests to backend to game backend cli
-	location /cli_api/ {
-		proxy_pass http://localhost:9090;
-		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header X-Forwarded-Proto $scheme;
-	}
-
-	# Handle all requests to backend to livechat sockets
-	location /ws/chat/ {
-		proxy_pass http://localhost:9000;
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "Upgrade";
-		proxy_set_header Host $host
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header X-Forwarded-Proto $scheme;
-
-		# Timeouts to prevent disconnections
-		proxy_read_timeout 60s;
-		proxy_send_timeout 60;
-	}
-
-	# Handle all requests to backend to gamebackend sockets
-	location /ws/game/ {
-		proxy_pass http://localhost:9090;
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection "Upgrade";
-		proxy_set_header Host $host
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header X-Forwarded-Proto $scheme;
-
-		# Timeouts to prevent disconnections
-		proxy_read_timeout 60s;
-		proxy_send_timeout 60;
-	}
-
-	# CORS (pls work i beg you)
-	add_header 'Access-Control-Allow-Origin' '*';
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
-    add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
-
-	# Handle preflight requests for CORS
-	if ($request_method = OPTIONS ) {
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PATCH, DELETE, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
-        return 204;  # No content for preflight requests
-    }
 }
