--- a/livechat/docker/Dockerfile
+++ b/livechat/docker/Dockerfile
@@ -10,8 +10,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY livechat/srcs/ /app/
 
-COPY shared /app/shared/
+# COPY shared /app/shared/
 
 EXPOSE 9000
 
-CMD ["python", "manage.py", "runserver", "9000"]
+CMD ["gunicorn", "livechat.wsgi:application", "--bind", "0.0.0.0:9000"]
