--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,14 +13,14 @@ http {
 
 	server {
 		listen 80;
-		server_name localhost;
+		server_name localhost 10.12.244.159;
 
 		return 301 https://$host$request_uri;
 	}
 
 	server {
 		listen 443 ssl;
-		server_name localhost;
+		server_name localhost 10.12.244.159;
 
 		#SSL certificates
 		ssl_certificate /etc/nginx/ssl/certificate.crt;
@@ -53,7 +53,7 @@ http {
 
 		# Handle all requests to backend to user
 		location /user/ {
-			proxy_pass http://localhost:8000;
+			proxy_pass http://users:8000;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -75,7 +75,7 @@ http {
 
 		# Handle all requests to backend to user-stats
 		location /user-stats/ {
-			proxy_pass http://localhost:8080;
+			proxy_pass http://user-stats:8080;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -97,7 +97,7 @@ http {
 
 		# Handle all requests to backend to livechat
 		location /rooms/ {
-			proxy_pass http://localhost:9000;
+			proxy_pass http://livechat:9000;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -195,6 +195,10 @@ http {
 				add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
 				return 204;  # No content for preflight requests
 			}
+		}
+
+		location ~* .(eot|ttf|woff|woff2)$ {
+			add_header Access-Control-Allow-Origin *;
 		}
 
 	}
