--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -141,7 +141,7 @@ http {
 
 		# Handle all requests to backend to livechat sockets
 		location /ws/chat/ {
-			proxy_pass http://localhost:9000;
+			proxy_pass http://livechat:9000;
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "Upgrade";
@@ -152,7 +152,7 @@ http {
 
 			# Timeouts to prevent disconnections
 			proxy_read_timeout 60s;
-			proxy_send_timeout 60;
+			proxy_send_timeout 60s;
 
 			# CORS (pls work i beg you)
 			add_header 'Access-Control-Allow-Origin' '*';
