--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -181,7 +181,7 @@ http {
 
 			# Timeouts to prevent disconnections
 			proxy_read_timeout 60s;
-			proxy_send_timeout 60;
+			proxy_send_timeout 60s;
 
 			# CORS (pls work i beg you)
 			add_header 'Access-Control-Allow-Origin' '*';
