--- a/livechat/docker/Dockerfile
+++ b/livechat/docker/Dockerfile
@@ -10,8 +10,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY livechat/srcs/ /app/
 
+ENV DJANGO_SETTINGS_MODULE=livechat.settings
 # COPY shared /app/shared/
 
 EXPOSE 9000
 
-CMD ["gunicorn", "livechat.wsgi:application", "--bind", "0.0.0.0:9000"]
+CMD ["daphne", "-b", "0.0.0.0", "-p", "9000", "livechat.asgi:application"]
