trying to add .env to frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
   #   networks:
   #     - app-network
   #   env_file:
-  #     - .env
+  #     - gamebackend/srcs/.env
   #   command: daphne -b 0.0.0.0 -p 9090 gameapi.asgi:application
 
   users:
@@ -21,7 +21,7 @@ services:
     networks:
       - app-network
     env_file:
-      - .env
+      - users/srcs/.env
     restart: on-failure
     # command: python manage.py runserver 0.0.0.0:8000
 
@@ -35,6 +35,8 @@ services:
       - "8080"
     networks:
       - app-network
+    env_file:
+      - user-game-stats/srcs/.env
     restart: on-failure
     # command: python manage.py runserver 0.0.0.0:8080
 
@@ -48,6 +50,8 @@ services:
       - "9000"
     networks:
       - app-network
+    env_file:
+      - livechat/srcs/.env
     restart: on-failure
     # command: python manage.py runserver 0.0.0.0:9000
 
@@ -69,6 +73,8 @@ services:
       # - gamebackend
     networks:
       - app-network
+    env_file:
+      - nginx/frontend/.env
     restart: on-failure
 
 networks:
