--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,6 @@ package.json
 __init__.py
 node_modules/**
 server.js
-users/srcs/shared/
-user_game_stats/srcs/shared/
-livechat/srcs/shared/
+users/srcs/shared/*
+user-game-stats/srcs/shared/*
+livechat/srcs/shared/*
