--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 services:
-  # gamebackend:
-  #   build:
-  #     dockerfile: gamebackend/docker/Dockerfile
-  #   ports:
-  #     - "9090:9090"
-  #   networks:
-  #     - app-network
-  #   env_file:
-  #     - gamebackend/srcs/.env
+  gamebackend:
+    container_name: gamebackend
+    build:
+      dockerfile: gamebackend/docker/Dockerfile
+    expose:
+      - "9090"
+    networks:
+      - app-network
+    env_file:
+      - gamebackend/srcs/.env
   #   command: daphne -b 0.0.0.0 -p 9090 gameapi.asgi:application
 
   users:
