--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -119,7 +119,7 @@ http {
 
 		# Handle all requests to backend to game backend cli
 		location /cli_api/ {
-			proxy_pass http://localhost:9090;
+			proxy_pass http://gamebackend:9090;
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -169,8 +169,8 @@ http {
 		}
 
 		# Handle all requests to backend to gamebackend sockets
-		location /ws/game/ {
-			proxy_pass http://localhost:9090;
+		location /ws/gamebackend/ {
+			proxy_pass http://gamebackend:9090;
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
 			proxy_set_header Connection "Upgrade";
