--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ package.json
 __init__.py
 node_modules/**
 server.js
-users/srcs/shared/*
-user-game-stats/srcs/shared/*
-livechat/srcs/shared/*
-gamebackend/shared/*
+users/srcs/shared/
+user-game-stats/srcs/shared/
+livechat/srcs/shared/
+gamebackend/shared/
