--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@ server.js
 users/srcs/shared/
 user-game-stats/srcs/shared/
 livechat/srcs/shared/
-gamebackend/shared/
+gamebackend/srcs/shared/
 nginx/ssl/
 shared/ssl/
