--- a/livechat/docker/Dockerfile
+++ b/livechat/docker/Dockerfile
@@ -11,8 +11,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY livechat/srcs/ /app/
 
 ENV DJANGO_SETTINGS_MODULE=livechat.settings
-# COPY shared /app/shared/
+
+COPY livechat/docker/run_server.sh .
 
 EXPOSE 9000
 
-CMD ["daphne", "-b", "0.0.0.0", "-p", "9000", "livechat.asgi:application"]
+ENTRYPOINT ["./run_server.sh"]
