--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    environment:
+      API_URL: ${API_URL}
       
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
