--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,8 @@ events {
 	worker_connections 1024;
 }
 
+env API_URL;
+
 http {
 	include /etc/nginx/mime.types;
 	default_type application/octet-stream;
@@ -13,14 +15,14 @@ http {
 
 	server {
 		listen 80;
-		server_name localhost 10.12.244.159;
+		server_name localhost $API_URL;
 
 		return 301 https://$host$request_uri;
 	}
 
 	server {
 		listen 443 ssl;
-		server_name localhost 10.12.244.159;
+		server_name localhost $API_URL;
 
 		#SSL certificates
 		ssl_certificate /etc/nginx/ssl/certificate.crt;
